// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditDashboard renders message when enough access 1`] = `
<Fragment>
  <EditBar />
  <div
    className="dashboard-wrapper"
    style={
      Object {
        "height": 656,
      }
    }
  >
    <TitleBar
      edit={true}
    />
    <ItemGrid
      edit={true}
    />
  </div>
</Fragment>
`;

exports[`EditDashboard renders message when not enough access 1`] = `
<Fragment>
  <EditBar />
  <NoContentMessage
    text="No access"
  />
</Fragment>
`;

exports[`EditDashboard renders print preview 1`] = `
<Fragment>
  <EditBar />
  <LayoutPrintPreview
    fromEdit={true}
  />
</Fragment>
`;
